<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/navigation_shop"
        android:enabled="true"
        android:icon="@drawable/sel_favourites"
        android:title="@string/shopInMenu"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@id/navigation_cart"
        android:enabled="true"
        android:icon="@drawable/ic_cart"
        android:title="@string/myCart"/>
    <item
        android:id="@+id/menu_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favourites"
        android:title="@string/favourites"/>
    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/myProfile"/>
</menu>