<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="375dp"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:paddingStart="46dp"
    android:paddingTop="24dp"
    android:paddingEnd="31dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_gravity="start"
            android:background="@drawable/ic_dialog_close" />

        <TextView
            style="@style/ParentText.18SP"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:text="@string/filter_options"
            android:textAlignment="center" />

        <TextView
            android:layout_width="86dp"
            android:layout_height="37dp"
            android:layout_gravity="end"
            android:background="@drawable/ic_dialog_done"
            android:gravity="center"
            android:text="@string/done" />

    </FrameLayout>

    <TextView
        style="@style/ParentText.18SP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/brand" />

    <Spinner
        android:id="@+id/SpinBrand"
        android:layout_width="@dimen/filter_spinner_width"
        android:layout_height="@dimen/filter_spinner_height"
        android:layout_marginTop="@dimen/filter_spinner_margin_top" />

    <TextView
        style="@style/ParentText.18SP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/price" />

    <Spinner
        android:id="@+id/SpinPrice"
        android:layout_width="@dimen/filter_spinner_width"
        android:layout_height="@dimen/filter_spinner_height"
        android:layout_marginTop="@dimen/filter_spinner_margin_top" />

    <TextView
        style="@style/ParentText.18SP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/size" />

    <Spinner
        android:id="@+id/SpinSize"
        android:layout_width="@dimen/filter_spinner_width"
        android:layout_height="@dimen/filter_spinner_height"
        android:layout_marginTop="@dimen/filter_spinner_margin_top" />

</LinearLayout>