<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_blue"
    android:padding="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/bg_cart_line" />

        <TextView
            style="@style/ParentText.15SP.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="15dp"
            android:text="@string/total" />

        <TextView
            style="@style/ParentText.15SP.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="46dp"
            android:text="@string/delivery" />

        <TextView
            android:id="@+id/total"
            style="@style/ParentText.15SP.White"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/delivery"
            style="@style/ParentText.15SP.White"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="46dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="91dp"
            android:background="@drawable/bg_cart_line" />

        <ImageButton
            android:id="@+id/btCheckout"
            style="@style/BigOrangeButton"
            android:layout_gravity="center|top"
            android:layout_marginTop="132dp"
            android:layout_marginBottom="55dp"
            android:contentDescription="@string/checkout" />

        <TextView
            android:id="@+id/checkout"
            style="@style/ParentText.20SP.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="146dp"
            android:text="@string/checkout" />
    </FrameLayout>
</FrameLayout>